# audora-pipeline

./: Dockerfile  pyproject.toml
app/: __init__.py  celery_app.py  celery_config.py  main.py
app/audio/: ffmpeg_wrapper.py  simple_processor.py
